api-gateway/ecommerce-k8s/ecommerce-admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-admin
  namespace: ecommerce
  labels:
    app: ecommerce-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-admin
  template:
    metadata:
      labels:
        app: ecommerce-admin
    spec:
      containers:
        - name: ecommerce-admin
          image: acrk8sprojectecommerce.azurecr.io/ecommerce-admin:16
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-admin
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-admin
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-store
  namespace: ecommerce
  labels:
    app: ecommerce-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-store
  template:
    metadata:
      labels:
        app: ecommerce-store
    spec:
      containers:
        - name: ecommerce-store
          image: acrk8sprojectecommerce.azurecr.io/ecommerce-store:1
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: secrets-store-inline-store
              mountPath: /mnt/secrets-store/store
              readOnly: true
      volumes:
        - name: secrets-store-inline-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"

---

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-store
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-store
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-admin
                port:
                  number: 3000
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: ecommerce-store
                port:
                  number: 3001
