api-gateway/ecommerce-k8s/ecommerce-store.yaml
# Version de prueba, no utilizar para despliegue final

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-store
  namespace: ecommerce
  labels:
    app: ecommerce-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-store
  template:
    metadata:
      labels:
        app: ecommerce-store
    spec:
      containers:
        - name: ecommerce-store
          image: ventana1901/ecommerce-store:v12
          ports:
            - containerPort: 3001
---
# Version de prueba, no utilizar para despliegue final

apiVersion: v1
kind: Service
metadata:
  name: ecommerce-store
  namespace: ecommerce
spec:
  selector:
    app: ecommerce-store
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP

---


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-admin
            port:
              number: 3000
      - path: "/store"
        pathType: Prefix
        backend:
          service:
            name: ecommerce-store
            port:
              number: 3001
