api-gateway/ecommerce-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-admin
                port:
                  number: 3000
          - path: /store
            pathType: Prefix
            backend:
              service:
                name: ecommerce-store
                port:
                  number: 3001
